# chatbot

./: .gitignore  README.md  app.py  genai.ipynb  model.py  pyproject.toml
storage/: default__vector_store.json  docstore.json  index_store.json
